opam-version: "2.0"
name: "kdl"
version: "0.1.0"
synopsis: "OCaml implementation of the KDL document laguage"
maintainer: "github.com/Bannerets <comonoid@protonmail.com>"
authors: "github.com/Bannerets <comonoid@protonmail.com>"
license: "MIT"
tags: ["configuration-language" "data-serialization-language"]
homepage: "https://github.com/Bannerets/ocaml-kdl"
bug-reports: "https://github.com/Bannerets/ocaml-kdl/issues"
dev-repo: "git+https://github.com/Bannerets/ocaml-kdl.git"
depends: [
  "ocaml" {>= "4.10"}
  "dune" {>= "3.0"}
  "menhir"
  "menhirLib"
  "sedlex" {>= "2.3"}
  "sexplib0"
  "ppx_expect" {with-test}
  "odoc" {with-doc}
]
build: [
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
