opam-version: "2.0"
name: "kdl"
version: "0.2.0"
synopsis: "OCaml implementation of the KDL Document Language"
maintainer: "eilvelia <hi@eilvelia.cat>"
authors: "eilvelia <hi@eilvelia.cat>"
license: "MPL-2.0"
tags: ["data-serialization-format" "configuration-format" "org:eilvelia"]
homepage: "https://github.com/eilvelia/ocaml-kdl"
bug-reports: "https://github.com/eilvelia/ocaml-kdl/issues"
dev-repo: "git+https://github.com/eilvelia/ocaml-kdl.git"
depends: [
  "ocaml" {>= "4.14"}
  "dune" {>= "3.0"}
  "menhir"
  "menhirLib"
  "sexplib0"
  "ppx_expect" {with-test}
  "zarith" {with-test}
  "odoc" {with-doc}
]
build: [
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
